--- a/express-webpack/package.json
+++ b/express-webpack/package.json
@@ -38,6 +38,8 @@
     "friendly-errors-webpack-plugin": "^1.6.1",
     "glob": "^7.1.2",
     "http-proxy-middleware": "^0.17.4",
+    "less": "^2.7.2",
+    "less-loader": "^4.0.5",
     "nodemon": "^1.11.0",
     "opn": "^5.1.0",
     "optimize-css-assets-webpack-plugin": "^3.0.0",
