--- a/express-webpack/package.json
+++ b/express-webpack/package.json
@@ -4,7 +4,9 @@
   "description": "webpack with express render",
   "main": "index.js",
   "scripts": {
-    "dev": "node dev-server.js",
+    "dev": "node index.js",
+    "build": "node build/build.js",
+    "prod": "node index.js --NODE_ENV=production",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -17,7 +19,8 @@
   "dependencies": {
     "art-template": "^4.12.1",
     "express": "^4.15.4",
-    "express-art-template": "^1.0.0"
+    "express-art-template": "^1.0.0",
+    "yargs": "^8.0.2"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
